--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	
 		<div class="page-header">
 	  		<h3>Electricity System Planning and Dispatch Calculator</h3>
-	  		<h6 class="h7">Daniel Thorpe, Jonah Elgart, and David Keith, Apr. 2016; Questions or comments contact <a href="mailto:daniel.thorpe01@gmail.com?subject=Electricity System Planning and Dispatch Calculator">daniel.thorpe01@gmail.com</a> </h6>
+	  		<h6 class="h7">Daniel Thorpe, Jonah Elgart, and David Keith, Apr. 2016; Questions or comments contact the developer, <a href="mailto:jonah@jonahelgart.com?subject=Electricity System Planning and Dispatch Calculator">jonah@jonahelgart.com</a> </h6>
 	  		<p>
 				This is a pedagogical tool for learning basic trends in electricity system planning and dispatch; it excludes many real-world details and is best used to understand qualitative trends. See notes at bottom.
 			</p>
